[package]
name = "discord"
version = "0.1.0"
edition = "2024"

[dependencies]

aho-corasick = "1.1.4"
async-lock = "3.4.2"
clap = { version = "^4.5", features = ["derive"] }
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
eyre = "0.6.12"
futures = "0.3.32"
itertools = "0.14.0"
linkify = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", features = ["formatting"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
